[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Prateek Kumar", email = "prateekkumar1393@gmail.com"},
]
dependencies = [
    "coredis>=4.15.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-docker>=2.0.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
