[project]
name = "playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Prateek Kumar", email = "prateekkumar1393@gmail.com"},
]
dependencies = [
    "coredis>=4.15.1",
]

requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-docker>=2.0.0",
    "coverage>=7.2.7",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
